src/test/deca/syntax/valid/parser/oracle/class_with_block_two_param.deca
class A{
    int f(int x, float f){
        int i = 0;
        println(x + i / f);
        if(true){
            return 1;
        }
    }
}
class B{}
{}