src/test/deca/syntax/invalid/parser/oracle/method_block_invalid2.deca
class A { a a (){if(a){}; int b;} }
